--- a/contact.html
+++ b/contact.html
@@ -1,83 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact – PT. GREEN KAPPIOTA</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
   <style>
-    html, body {
-      height: 100%;
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #f8f9fa;
-      display: flex;
-      flex-direction: column;
-    }
-
-    .navbar {
-      background-color: #5c6b2b;
-    }
-
-    .navbar-brand, .nav-link {
-      color: white !important;
-    }
-
-    .navbar-brand img {
-      height: 60px;
-      margin-right: 10px;
-    }
-
-    .nav-scroll {
-      overflow-x: auto;
-      white-space: nowrap;
-      scrollbar-width: none;
-    }
-
-    .nav-scroll::-webkit-scrollbar {
-      display: none;
-    }
-
+    body, html { margin: 0; padding: 0; height: 100%; font-family: 'Segoe UI', sans-serif; background: #f8f9fa; }
+    .navbar { background-color: #5c6b2b; }
+    .navbar-brand, .nav-link { color: white !important; }
+    .navbar-brand img { height: 60px; margin-right: 10px; }
+    .nav-scroll { overflow-x: auto; white-space: nowrap; scrollbar-width: none; }
+    .nav-scroll::-webkit-scrollbar { display: none; }
     .hero {
       background: linear-gradient(to right, #79824b, #a0ac5e);
       color: white;
       padding: 60px 20px;
       text-align: center;
     }
-
+    .content-section {
+      padding: 40px 20px;
+    }
     footer {
-      background-color: #79824b;
+      background: linear-gradient(to top, #5c6b2b, #79824b);
+      background-attachment: fixed;
       color: white;
       text-align: center;
-      padding: 30px 10px;
-      margin-top: auto;
+      padding: 60px 20px;
     }
-
-    main {
-      flex: 1;
-    }
-
-    .form-container, .contact-info {
+    #loader {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
       background: white;
-      border-radius: 8px;
-      padding: 30px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      margin-bottom: 30px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 2000;
     }
-
-    .form-container h3, .contact-info h3 {
-      color: #5c6b2b;
+    .whatsapp-btn {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: #25D366;
+      color: white;
+      padding: 12px 16px;
+      border-radius: 50%;
+      font-size: 20px;
+      z-index: 999;
     }
   </style>
 </head>
 <body>
+<div id="loader">
+  <div class="spinner-border text-success" role="status"></div>
+</div>
 
-<!-- NAVBAR -->
 <nav class="navbar px-3">
   <div class="container-fluid d-block">
     <div class="d-flex align-items-center mb-2">
       <a href="index.html" class="navbar-brand d-flex align-items-center">
-        <img src="images/logo-gika.jpg" alt="Logo" />
+        <img src="images/logo-gika.jpg" alt="Logo">
         <strong>PT. GREEN KAPPIOTA</strong>
       </a>
     </div>
@@ -96,67 +81,56 @@
   </div>
 </nav>
 
-<!-- HERO -->
 <section class="hero">
   <div class="container">
-    <h1>Contact Us</h1>
-    <p>Reach out to us or send a message directly</p>
+    <h1 class="display-5" data-aos="fade-down">Contact Us</h1>
   </div>
 </section>
 
-<!-- MAIN CONTENT -->
-<main>
-  <div class="container my-5">
-    <div class="row">
-      <!-- CONTACT INFO -->
-      <div class="col-md-6 contact-info">
-        <h3>Our Contacts</h3>
-        <p><strong>M. Azhar</strong><br>
-          Email: — <br>
-          Mobile: —<br>
-          Address: Tampak Siring Blok B3/1, Puri Gading, Bekasi.
-        </p>
-        <p><strong>Dewi Damayanti</strong><br>
-          Email: <a href="mailto:dewidamayanti2614@gmail.com">dewidamayanti2614@gmail.com</a><br>
-          Mobile: +62 81293716447<br>
-          Address: Tampak Siring Blok B3/1, Puri Gading, Bekasi.
-        </p>
-      </div>
-
-      <!-- FORM -->
-      <div class="col-md-6 form-container">
-        <h3>Send Us a Message</h3>
-        <form action="https://formsubmit.co/muhammadnaufalfadhil1@gmail.com" method="POST">
-          <input type="hidden" name="_captcha" value="false">
-          <input type="hidden" name="_next" value="https://mnaufalfadhil.github.io/PT-GreenKappiota/thankyou.html">
-
-          <div class="mb-3">
-            <label for="name" class="form-label">Your Name</label>
-            <input type="text" class="form-control" id="name" name="name" required />
-          </div>
-
-          <div class="mb-3">
-            <label for="email" class="form-label">Your Email</label>
-            <input type="email" class="form-control" id="email" name="email" required />
-          </div>
-
-          <div class="mb-3">
-            <label for="message" class="form-label">Message</label>
-            <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
-          </div>
-
-          <button type="submit" class="btn btn-success">Send Message</button>
-        </form>
-      </div>
+<section class="content-section container" data-aos="fade-up">
+  <div class="row">
+    <div class="col-md-6 mb-4">
+      <h5>Head Office</h5>
+      <p><strong>PT. GREEN KAPPIOTA</strong><br>
+      Tampak Siring Blok B3/1, Puri Gading, Bekasi.</p>
+      <p><strong>M. Azhar</strong><br>Email: ………<br>Mobile: +62 81214056502</p>
+      <p><strong>Dewi Damayanti</strong><br>Email: dewidamayanti2614@gmail.com<br>Mobile: +62 81293716447</p>
+    </div>
+    <div class="col-md-6">
+      <h5>Send Us a Message</h5>
+      <form action="https://formsubmit.co/muhammadnaufalfadhil1@gmail.com" method="POST">
+        <div class="mb-3">
+          <input type="text" name="name" class="form-control" placeholder="Your Name" required>
+        </div>
+        <div class="mb-3">
+          <input type="email" name="email" class="form-control" placeholder="Your Email" required>
+        </div>
+        <div class="mb-3">
+          <textarea name="message" class="form-control" rows="4" placeholder="Your Message" required></textarea>
+        </div>
+        <input type="hidden" name="_next" value="thankyou.html">
+        <input type="hidden" name="_captcha" value="false">
+        <button type="submit" class="btn btn-success">Send Message</button>
+      </form>
     </div>
   </div>
-</main>
+</section>
 
-<!-- FOOTER -->
 <footer>
   &copy; 2025 PT. GREEN KAPPIOTA – All rights reserved.
 </footer>
 
+<a href="https://wa.me/6281293716447" target="_blank" class="whatsapp-btn">
+  <i class="bi bi-whatsapp"></i>
+</a>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+<script>
+  AOS.init();
+  window.addEventListener('load', () => {
+    document.getElementById('loader').style.display = 'none';
+  });
+</script>
 </body>
 </html>
