--- a/contact.html
+++ b/contact.html
@@ -1,39 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact – PT. GREEN KAPPIOTA</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
   <style>
-    html, body {
-      height: 100%;
-      margin: 0;
+    body {
       font-family: 'Segoe UI', sans-serif;
-      background: #f8f9fa;
+      background-color: #f8f9fa;
+      margin: 0;
     }
-    .navbar { background-color: #5c6b2b; }
-    .navbar-brand, .nav-link { color: white !important; }
-    .navbar-brand img { height: 60px; margin-right: 10px; }
+    .navbar {
+      background-color: #5c6b2b;
+    }
+    .navbar-brand, .nav-link {
+      color: white !important;
+    }
+    .navbar-brand img {
+      height: 60px;
+      margin-right: 10px;
+    }
     .hero {
       background: linear-gradient(to right, #79824b, #a0ac5e);
       color: white;
       padding: 60px 20px;
       text-align: center;
     }
-    .nav-scroll { overflow-x: auto; white-space: nowrap; scrollbar-width: none; }
-    .nav-scroll::-webkit-scrollbar { display: none; }
-    .content-section {
-      padding: 40px 20px;
-    }
     footer {
-      background: linear-gradient(to top, #5c6b2b, #79824b);
-      background-attachment: fixed;
+      background-color: #79824b;
       color: white;
       text-align: center;
-      padding: 60px 20px;
+      padding: 30px 20px;
+      margin-top: 60px;
     }
     #loader {
       position: fixed;
@@ -43,7 +44,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      z-index: 2000;
+      z-index: 9999;
     }
     .whatsapp-btn {
       position: fixed;
@@ -60,48 +61,54 @@
 </head>
 <body>
 
+<!-- Loader -->
 <div id="loader">
   <div class="spinner-border text-success" role="status"></div>
 </div>
 
-<nav class="navbar px-3">
-  <div class="container-fluid d-block">
-    <div class="d-flex align-items-center mb-2">
-      <a href="index.html" class="navbar-brand d-flex align-items-center">
-        <img src="images/logo-gika.jpg" alt="Logo">
-        <strong>PT. GREEN KAPPIOTA</strong>
-      </a>
-    </div>
-    <div class="nav-scroll">
-      <ul class="nav flex-nowrap overflow-auto text-nowrap">
-        <li class="nav-item"><a class="nav-link text-white" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link text-white" href="about.html">About</a></li>
-        <li class="nav-item"><a class="nav-link text-white" href="vision.html">Vision</a></li>
-        <li class="nav-item"><a class="nav-link text-white" href="services.html">Services</a></li>
-        <li class="nav-item"><a class="nav-link text-white" href="values.html">Values</a></li>
-        <li class="nav-item"><a class="nav-link text-white" href="team.html">Team</a></li>
-        <li class="nav-item"><a class="nav-link text-white" href="portfolio.html">Portfolio</a></li>
-        <li class="nav-item"><a class="nav-link text-white" href="contact.html">Contact</a></li>
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg">
+  <div class="container">
+    <a class="navbar-brand d-flex align-items-center" href="index.html">
+      <img src="images/logo-gika.jpg" alt="Logo">
+      <strong>PT. GREEN KAPPIOTA</strong>
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+      <span class="navbar-toggler-icon bg-light"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="vision.html">Vision</a></li>
+        <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
+        <li class="nav-item"><a class="nav-link" href="values.html">Values</a></li>
+        <li class="nav-item"><a class="nav-link" href="team.html">Team</a></li>
+        <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+        <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
+<!-- Hero -->
 <section class="hero">
   <div class="container">
     <h1 class="display-5" data-aos="fade-down">Contact Us</h1>
   </div>
 </section>
 
-<section class="content-section container" data-aos="fade-up">
+<!-- Contact Section -->
+<section class="container my-5" data-aos="fade-up">
   <div class="row">
     <div class="col-md-6 mb-4">
-      <h5>Head Office</h5>
+      <h5>Office Info</h5>
       <p><strong>PT. GREEN KAPPIOTA</strong><br>
-      Tampak Siring Blok B3/1, Puri Gading, Bekasi.</p>
-      <p><strong>M. Azhar</strong><br>Email: ………<br>Mobile: +62 81214056502</p>
+        Tampak Siring Blok B3/1, Puri Gading, Bekasi.</p>
+      <p><strong>M. Azhar</strong><br>Email: ………<br>Mobile: ………</p>
       <p><strong>Dewi Damayanti</strong><br>Email: dewidamayanti2614@gmail.com<br>Mobile: +62 81293716447</p>
     </div>
+
     <div class="col-md-6">
       <h5>Send Us a Message</h5>
       <form action="https://formsubmit.co/muhammadnaufalfadhil1@gmail.com" method="POST">
@@ -114,22 +121,28 @@
         <div class="mb-3">
           <textarea name="message" class="form-control" rows="4" placeholder="Your Message" required></textarea>
         </div>
-        <input type="hidden" name="_next" value="thankyou.html">
+
+        <!-- Redirect to thankyou.html -->
+        <input type="hidden" name="_next" value="https://mnaufalfadhil.github.io/PT-GreenKappiota/thankyou.html">
         <input type="hidden" name="_captcha" value="false">
+
         <button type="submit" class="btn btn-success">Send Message</button>
       </form>
     </div>
   </div>
 </section>
 
-<footer>
-  &copy; 2025 PT. GREEN KAPPIOTA – All rights reserved.
-</footer>
-
+<!-- WhatsApp Button -->
 <a href="https://wa.me/6281293716447" target="_blank" class="whatsapp-btn">
   <i class="bi bi-whatsapp"></i>
 </a>
 
+<!-- Footer -->
+<footer>
+  &copy; 2025 PT. GREEN KAPPIOTA – All rights reserved.
+</footer>
+
+<!-- Scripts -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
 <script>
@@ -138,5 +151,6 @@
     document.getElementById('loader').style.display = 'none';
   });
 </script>
+
 </body>
 </html>
