--- a/contact.html
+++ b/contact.html
@@ -57,6 +57,15 @@
       font-size: 20px;
       z-index: 999;
     }
+
+    /* Agar navbar tetap terlihat di HP */
+    #navbarNav {
+      overflow-x: auto;
+      white-space: nowrap;
+    }
+    .navbar-nav {
+      flex-wrap: nowrap;
+    }
   </style>
 </head>
 <body>
@@ -66,17 +75,14 @@
   <div class="spinner-border text-success" role="status"></div>
 </div>
 
-<!-- Navbar -->
+<!-- Navbar selalu terbuka -->
 <nav class="navbar navbar-expand-lg">
   <div class="container">
     <a class="navbar-brand d-flex align-items-center" href="index.html">
       <img src="images/logo-gika.jpg" alt="Logo">
       <strong>PT. GREEN KAPPIOTA</strong>
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon bg-light"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+    <div class="d-flex flex-wrap ms-auto" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
