--- a/contact.html
+++ b/contact.html
@@ -75,22 +75,21 @@
   <div class="spinner-border text-success" role="status"></div>
 </div>
 
-<!-- Navbar selalu terbuka -->
 <nav class="navbar navbar-expand-lg">
-  <div class="container">
+  <div class="container-fluid px-4">
     <a class="navbar-brand d-flex align-items-center" href="index.html">
-      <img src="images/logo-gika.jpg" alt="Logo">
+      <img src="images/logo-gika.jpg" alt="Logo" style="height: 50px; margin-right: 10px;">
       <strong>PT. GREEN KAPPIOTA</strong>
     </a>
-    <div class="d-flex flex-wrap ms-auto" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="vision.html">Vision</a></li>
-        <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-        <li class="nav-item"><a class="nav-link" href="values.html">Values</a></li>
-        <li class="nav-item"><a class="nav-link" href="team.html">Team</a></li>
-        <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+    <div id="navbarNav" class="d-flex flex-row flex-nowrap overflow-auto ms-auto">
+      <ul class="navbar-nav flex-row">
+        <li class="nav-item me-3"><a class="nav-link" href="index.html">Home</a></li>
+        <li class="nav-item me-3"><a class="nav-link" href="about.html">About</a></li>
+        <li class="nav-item me-3"><a class="nav-link" href="vision.html">Vision</a></li>
+        <li class="nav-item me-3"><a class="nav-link" href="services.html">Services</a></li>
+        <li class="nav-item me-3"><a class="nav-link" href="values.html">Values</a></li>
+        <li class="nav-item me-3"><a class="nav-link" href="team.html">Team</a></li>
+        <li class="nav-item me-3"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
         <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
       </ul>
     </div>
